--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <div class="top-container">
-        <img class="top-cloud" src="images/cloud.png" alt="cloud">
+        <img class="top-cloud" src="Images/cloud.png" alt="cloud">
         <h1>I'm Kunal</h1>
         <h2>A <span class="web">Web</span> designer</h2>
-        <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
-        <img class="mountain" src="images/mountain.png" alt="mountain">
+        <img class="bottom-cloud" src="Images/cloud.png" alt="cloud">
+        <img class="mountain" src="Images/mountain.png" alt="mountain">
     </div>
     <div class="middle-container">
         <div class="profile">
